// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`devtool transforms correctly using "devtools-0" data 1`] = `
"module.exports = {
    entry: 'index.js',
    output: {
		filename: 'bundle.js'
	},

    devtool: 'source-map'
}
"
`;

exports[`devtool transforms correctly using "devtools-0" data 2`] = `
"module.exports = {
    entry: 'index.js',
    output: {
		filename: 'bundle.js'
	},

    devtool: 'cheap-module-source-map'
}
"
`;

exports[`devtool transforms correctly using "devtools-0" data 3`] = `
"module.exports = {
    entry: 'index.js',
    output: {
		filename: 'bundle.js'
	},

    devtool: myVariable
}
"
`;

exports[`devtool transforms correctly using "devtools-0" data 4`] = `
"module.exports = {
    entry: 'index.js',
    output: {
		filename: 'bundle.js'
	},

    devtool: false
}
"
`;
